--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,5 @@ services:
     tty: true
     stdin_open: true
     environment:
-      AWS_ACCESS_KEY_ID: 
-      AWS_SECRET_ACCESS_KEY: 
-      
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
